# squares

./: .gitignore  CMakeLists.txt  README.md
libs/: stb_image_write.h
libs/SFML/doc/html/: Context_8hpp_source.html  Event_8hpp_source.html  Font_8hpp_source.html  Image_8hpp_source.html  Rect_8hpp_source.html  RenderTexture_8hpp_source.html  RenderWindow_8hpp_source.html  Texture_8hpp_source.html  VideoMode_8hpp_source.html  View_8hpp_source.html  Window_2Window_8hpp_source.html  annotated.html  classsf_1_1Context-members.html  classsf_1_1Context.html  classsf_1_1Cursor.html  classsf_1_1Event.html  classsf_1_1Image-members.html  classsf_1_1Image.html  classsf_1_1NonCopyable.html  classsf_1_1OutputSoundFile.html  classsf_1_1Rect-members.html  classsf_1_1Rect.html  classsf_1_1RenderTexture-members.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow-members.html  classsf_1_1RenderWindow.html  classsf_1_1Texture-members.html  classsf_1_1Texture.html  classsf_1_1VideoMode-members.html  classsf_1_1VideoMode.html  classsf_1_1View-members.html  classsf_1_1View.html  classsf_1_1Window-members.html  classsf_1_1Window.html  deprecated.html  files.html  functions_h.html  functions_vars.html  functions_w.html  group__window.html  (+6 more)
libs/TGUI/doc/: header.html
libs/TGUI/doc/html/: _absolute_or_relative_value_8hpp_source.html  _all_widgets_8hpp_source.html  _animation_8hpp_source.html  _any_8hpp_source.html  (+532 more)
resources/: MapConfig.json
src/: CoordinateEntity.cpp  Game.cpp  MapGenerator.cpp  MapGenerator.h  coordinateEntity.cpp  coordinateEntity.hpp  game.cpp
(+16 files in other folders)
